--- a/style.css
+++ b/style.css
@@ -1,23 +1,50 @@
 body {
     font-family: 'Fira Mono', monospace;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     height: 100vh;
+    font-size: 12px;
+    margin: 0 auto;
+}
+
+.header {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    background-color: black;
+    height: 10%;
+    color: azure;
+    padding: 10px;
+}
+
+.header .title {
+    font-size: 2em;
 }
 
 .main_container {
-    background-color: whitesmoke;
+    height: 85vh;
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+}
+
+.main_post {
+    background-color: whitesmoke;
     border-color: silver;
     border-radius: 5px;
-    box-shadow: 5px 8px #888888;
+    max-width: 75%;
+    box-shadow: 2px 4px #888888;
+    padding: 12px;
 
 }
 
-.title {
-    padding: 2rem;
+.main_post .post_title {
+    text-align: center;
 }
+
+.main_post .post_footer {
+    border-top: 1px outset #534d4d6c;
+    font-size: 0.7em;
+    margin-top: 30px;
+    padding: 10px;
+}
+
 
